--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -1,5 +1,4 @@
 <html xmlns:th="http://www.thymeleaf.org">
-
 <div th:fragment="headerFragment">
     <header class="layout-navigation-bar">
         <div class="sticky-container layout-navigation-primary-wrap">
@@ -14,9 +13,9 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="layout-navigation-primary__left">
+                    <div th:class="layout-navigation-primary__left">
                         <a class="layout-navigation-logo layout-navigation__bar__logo" aria-label="니가사는그집" href="/">
-                        <img src="/img/theHouseLogo.png" class="icon" width="100" height="100"/></a>
+                        <img th:src="@{/img/theHouseLogo.png}" th:class="icon" width="100" height="100"/></a>
                     </div>
                     <nav class="layout-navigation-primary__menu">
                         <a class="layout-navigation-primary__menu__item" href="">커뮤니티</a>
@@ -29,12 +28,12 @@
                                     <div id="id-89-combobox" class="layout-navigation-search__combobox" role="combobox"
                                          aria-haspopup="listbox" aria-expanded="false">
                                         <div class="layout-navigation-search__input">
-                                            <form method="get" action="/productions/search" class="form-inline">
+                                            <form method="get" action="/productions/searchlist" class="form-inline">
                                             <input class="layout-navigation-search__input__text" type="text"
                                                    autocomplete="off"
                                                    size="1" id="id-89-input" aria-autocomplete="list"
                                                    placeholder="스토어 검색"
-                                                   aria-label="스토어 검색" name="index">
+                                                   aria-label="스토어 검색"  name="index" th:id="${index}" th:value="${index?:''}" onfocus="this.value=''">
                                             <svg class="layout-navigation-search__input__icon" width="24" height="24"
                                                  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                                  preserveAspectRatio="xMidYMid meet">
@@ -77,7 +76,7 @@
                 <div class="layout-navigation-secondary__content">
                     <nav class="layout-navigation-secondary__menu">
                         <a id="storeMain" class="layout-navigation-secondary__menu__item" href="/">스토어홈</a>
-                        <a id="category" class="layout-navigation-secondary__menu__item" href="">카테고리</a>
+                        <a id="category" class="layout-navigation-secondary__menu__item" href="/productions/category?categoryCode=0">카테고리</a>
                         <a id="storeBest" class="layout-navigation-secondary__menu__item" href="/storeBest">베스트</a>
                     </nav>
                 </div>
@@ -85,5 +84,4 @@
         </div>
     </header>
 </div>
-
 </html>
