--- a/src/main/resources/templates/th/login/all.html
+++ b/src/main/resources/templates/th/login/all.html
@@ -11,13 +11,13 @@
 
 <sec:authorize access="isAnonymous()">
 
-    <a href="/customLogin">로그인</a>
+    <a href="/login/customLogin">로그인</a>
 
 </sec:authorize>
 
 <sec:authorize access="isAuthenticated()">
 
-    <a href="/customLogout">로그아웃</a>
+    <a href="/login/customLogout">로그아웃</a>
 
 </sec:authorize>
 
