--- a/src/main/resources/templates/th/login/home.html
+++ b/src/main/resources/templates/th/login/home.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>홈페이지입니다.</h1><br>
-    <a th:href="@{/customLogin}">로그인 하기</a>
+    <a th:href="@{/login/customLogin}">로그인 하기</a>
 </body>
 </html>
