--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -15,8 +15,8 @@
                         </button>
                     </div>
                     <div class="layout-navigation-primary__left">
-                        <a class="layout-navigation-logo layout-navigation__bar__logo" aria-label="니가사는그집" href="/">
-                        <img src="/img/theHouseLogo.png" class="icon" width="100" height="100"/></a>
+                        <a class="layout-navigation-logo layout-navigation__bar__logo" aria-label="니가사는그집" href="/static">
+                        <img src="/static/img/theHouseLogo.png" class="icon" width="100" height="100"/></a>
                     </div>
                     <nav class="layout-navigation-primary__menu">
                         <a class="layout-navigation-primary__menu__item" href="">커뮤니티</a>
