0611 질문게시판 끝

--- a/src/main/resources/templates/th/askBoard/askBoardUpdate.html
+++ b/src/main/resources/templates/th/askBoard/askBoardUpdate.html
@@ -5,7 +5,7 @@
     <title>글 수정</title>
 
     <script src="https://code.jquery.com/jquery-latest.js"></script>
-    <script type="text/javascript" src="/resources/editor/js/HuskyEZCreator.js" charset="utf-8"></script>
+    <script type="text/javascript" th:src="@{/editor/js/HuskyEZCreator.js}" charset="utf-8"></script>
 </head>
 <script type="text/javascript">
     $(function(){
@@ -13,8 +13,8 @@
 
         nhn.husky.EZCreator.createInIFrame({
             oAppRef: obj,
-            elPlaceHolder: "editor",
-            sSkinURI: "/resources/editor/SmartEditor2Skin.html",
+            elPlaceHolder: "askContent",
+            sSkinURI: "/editor/SmartEditor2Skin.html",
             htParams : {
                 bUseToolbar : true,
                 bUseVerticalResizer : true,
@@ -23,7 +23,7 @@
         });
 
         $("#updateBoard").click(function(){
-            obj.getById["editor"].exec("UPDATE_CONTENTS_FIELD", []);
+            obj.getById["askContent"].exec("UPDATE_CONTENTS_FIELD", []);
             $("#updateBoardFrm").submit();
         });
     });
@@ -38,12 +38,10 @@
             <input type="text" th:value="${detail.askTitle}" id="askTitle" name="askTitle"/>
         </div>
         <div class="form-group">
-            <label for="editor">내용</label>
-            <textarea name="editor" id="editor" style="width: 700px; height: 400px; ">
-                <th:block th:value="${detail.askContent}"/>
-            </textarea>
+            <label for="askContent">내용</label>
+            <textarea name="askContent" id="askContent"  style="width: 700px; height: 400px; " ><th:block th:utext="${detail.askContent}"/></textarea>
         </div>
-        <input type="hidden" name="askBoardNo" th:value="${detail.askBoardNo}"/>
+        <input type="hidden" name="askBoardno" th:value="${detail.askBoardno}"/>
         <input type="button" id="updateBoard" value="등록"/>
     </form>
 </div>
