--- a/src/main/resources/templates/th/main/recommendList.html
+++ b/src/main/resources/templates/th/main/recommendList.html
@@ -3,21 +3,17 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="th/layout/defaultLayout">
 <head>
-    <meta charset="UTF-8">
     <title>메인</title>
 
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
-    <script type="text/javascript" th:inline="javascript">history.scrollRestoration = "auto"</script>
 </head>
 <body>
 <div layout:fragment="content">
-    <div id="store-index">
-        <section class="container store-index-section store-index-recommend-list" sec:authorize access="hasRole('ROLE_MEMBER')" ><h1>추천 상품</h1></section>
-        <section class="container store-index-section store-index-product-list"><h1>인기 상품</h1>
+        <section class="container store-index-section store-index-product-list" th:style="${showRecommend}!=null ? 'display:block' : 'display:none'"><h1>추천 상품</h1>
             <div class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
-                <tr th:each="products : ${mainList}">
+                <tr th:each="products : ${recommendList}">
                     <div class="col-6 col-md-3 product-item-wrap">
                         <article class="production-item"><a class="production-item__overlay" href=""></a>
                             <div class="production-item-image production-item__image">
@@ -26,18 +22,17 @@
                             <div class="production-item__content">
                                 <h1 class="production-item__header">
                                     <span class="production-item__header__brand" th:text="${products.sellerName}"></span>
-                                    <span class="production-item__header__name" th:text="${products.productName}"></span></h1>
+                                    <span class="production-item__header__name" th:text="${products.productName}"></span>
+                                </h1>
                                 <span class="production-item-price">
-                            <span class="production-item-price__price" th:text="${products.customerPrice}"></span>
-                        </span>
+                                    <span class="production-item-price__price" th:text="${#numbers.formatInteger(products.customerPrice, 3, 'COMMA')}"></span>
+                                </span>
                             </div>
                         </article>
                     </div>
                 </tr>
             </div>
-
         </section>
-    </div>
 </div>
 </body>
 </html>
