--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -1,87 +1,111 @@
-<html xmlns:th="http://www.thymeleaf.org">
+
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <div th:fragment="headerFragment">
-    <header class="layout-navigation-bar">
-        <div class="sticky-container layout-navigation-primary-wrap">
-            <div class="sticky-child layout-navigation-primary">
-                <div class="layout-navigation-primary__content">
-                    <div class="layout-navigation-primary__leftmost">
-                        <button class="layout-navigation-bar-icon layout-navigation-bar-drawer-button" title="메뉴"
-                                aria-label="메뉴" type="button">
-                            <svg class="icon" width="24" height="24" viewBox="0 0 24 24"
-                                 preserveAspectRatio="xMidYMid meet">
-                                <path fill="currentColor" d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <div th:class="layout-navigation-primary__left">
-                        <a class="layout-navigation-logo layout-navigation__bar__logo" aria-label="니가사는그집" href="/">
-                        <img th:src="@{/img/theHouseLogo.png}" th:class="icon" width="100" height="100"/></a>
-                    </div>
-                    <nav class="layout-navigation-primary__menu">
-                        <a class="layout-navigation-primary__menu__item" href="">커뮤니티</a>
-                        <a class="layout-navigation-primary__menu__item" href="/">스토어</a>
-                    </nav>
-                    <div class="layout-navigation-primary__right">
-                        <div class="layout-navigation-bar-search">
-                            <div class="layout-navigation-search" id="id-89">
-                                <div class="layout-navigation-search__header">
-                                    <div id="id-89-combobox" class="layout-navigation-search__combobox" role="combobox"
-                                         aria-haspopup="listbox" aria-expanded="false">
-                                        <div class="layout-navigation-search__input">
-                                            <form method="get" action="/productions/searchlist" class="form-inline">
-                                            <input class="layout-navigation-search__input__text" type="text"
-                                                   autocomplete="off"
-                                                   size="1" id="id-89-input" aria-autocomplete="list"
-                                                   placeholder="스토어 검색"
-                                                   aria-label="스토어 검색"  name="index" th:id="${index}" th:value="${index?:''}" onfocus="this.value=''">
-                                            <svg class="layout-navigation-search__input__icon" width="24" height="24"
-                                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                 preserveAspectRatio="xMidYMid meet">
-                                                <path d="M22 22l-5-5"></path>
-                                                <circle cx="11" cy="11" r="8"></circle>
-                                            </svg>
-                                            </form>
-                                        </div>
-                                    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 xs-12 md-auto">
+                <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light" style="background-color: white;">
+                    <a class="navbar-brand" href="#"><img th:src="@{icon/thehouse.jpg}" class="rounded-circle" width=50px
+                                                          height=50px /> <b> TheHouse</b></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
+                                   aria-expanded="false">
+
+                                    커뮤니티
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">커뮤니티홈</a>
+                                    <a class="dropdown-item" href="#">질문</a>
                                 </div>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
+                                   aria-expanded="false">
+
+                                    스토어
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">스토어홈</a>
+                                    <a class="dropdown-item" href="#">카테고리</a>
+                                    <a class="dropdown-item" href="#">베스트</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#">
+
+                                    Disabled
+                                </a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
+                                   aria-expanded="false">
+
+                                    Dropdown
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Action</a>
+                                </div>
+                            </li>
+                            <div class="nav-wrapper">
+                                <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
+
+                                    <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
+                                           aria-label="Search"></input>
+                                    <i class="fas fa-search ml-2"> </i>
+
+                                </form>
                             </div>
-                        </div>
-                        <button class="layout-navigation-bar-icon layout-navigation-bar-search-button" title="검색"
-                                aria-label="검색" type="button">
-                            <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                 stroke="currentColor" stroke-width="2" preserveAspectRatio="xMidYMid meet">
-                                <path d="M22 22l-5-5"></path>
-                                <circle cx="11" cy="11" r="8"></circle>
-                            </svg>
-                        </button>
-                        <a class="layout-navigation-bar-icon" title="장바구니" aria-label="장바구니" href="">
-                            <svg class="icon" width="24" height="24" viewBox="0 0 24 24" stroke="currentColor"
-                                 fill="none"
-                                 stroke-linejoin="round" stroke-width="2" preserveAspectRatio="xMidYMid meet">
-                                <path stroke-linecap="round"
-                                      d="M4 5h18l-2.6 10.5a2 2 0 0 1-2 1.5H8.6a2 2 0 0 1-2-1.5L4 5zm4 15.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0zm7 0a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0z"></path>
-                                <path d="M1 2h3v3"></path>
-                            </svg>
-                            <!--장바구니 알림 <span class="layout-navigation-bar-icon__ticker"></span>--></a>
-                        <div class="layout-navigation-bar-login">
-                            <a class="layout-navigation-bar-login__item" href="">로그인</a>
-                            <a class="layout-navigation-bar-login__item" href="">회원가입</a>
-                        </div>
+                        </ul>
+
+
+
+                        <ul class="navbar-nav">
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="##">
+                                    <span class="asdf" style="font-size: 16px; color: black;">
+                                        <i class="fas fa-shopping-cart"> 장바구니</i>
+                                    </span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="###">
+                                    <span class="asdf" style="font-size: 16px; color: black;">
+                                        <i class="fas fa-sign-in-alt"> 로그인</i>
+
+                                    </span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#####">
+                                    <span style="font-size: 16px; color: black;">
+                                        <i class="fas fa-user-circle"> 회원가입</i>
+
+                                    </span>
+                                </a>
+                            </li>
+
+                        </ul>
+
                     </div>
-                </div>
+                </nav>
             </div>
         </div>
-        <div data-sticky-enabled="false" data-sticky-always="true" data-direction="top" data-offset="31" class="sticky-container layout-navigation-secondary-wrap">
-            <div class="sticky-child layout-navigation-secondary" style="position: relative;">
-                <div class="layout-navigation-secondary__content">
-                    <nav class="layout-navigation-secondary__menu">
-                        <a id="storeMain" class="layout-navigation-secondary__menu__item" href="/">스토어홈</a>
-                        <a id="category" class="layout-navigation-secondary__menu__item" href="/productions/category?categoryCode=0">카테고리</a>
-                        <a id="storeBest" class="layout-navigation-secondary__menu__item" href="/storeBest">베스트</a>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
+    </div>
 </div>
+
 </html>
