--- a/src/main/resources/templates/th/login/customLogin.html
+++ b/src/main/resources/templates/th/login/customLogin.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" th:href="@{/static/css/login.css}">
-    <link rel="icon" th:href="@{/static/icon/thehouse.jpg}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
+    <link rel="icon" th:href="@{/icon/thehouse.jpg}">
     <title>니가사는그집</title>
 </head>
 
@@ -28,15 +28,15 @@
                 <form method='post' th:action="@{/login}">
                     <hr>
                     <div class="mt-4 mb-3">
-                        <label for="username">아이디<span class="text-muted"></span></label> <input
+                        <label for="username">이메일<span class="text-muted"></span></label> <input
                             type="text" class="form-control" id="username" name="username" placeholder="User email">
                         <div class="invalid-feedback">아이디를 입력하세요.</div>
                     </div>
                     <div class="mb-4">
-                        <label for="userpw">패스워드<span class="text-muted"></span></label> <input
-                            type="password" class="form-control" id="userpw" name="userpw"
+                        <label for="password">패스워드<span class="text-muted"></span></label> <input
+                            type="password" class="form-control" id="password" name="password"
                             placeholder="User password">
-                        <div class="invalid-feedback">아이디를 입력하세요.</div>
+                        <div class="invalid-feedback">비밀번호를 입력하세요.</div>
                     </div>
 
                     <button class="btn btn-info btn-lg btn-block mb-3" id="loginButton" type="submit">
